fix: likes on mobile

--- a/components/resource/layout/author/author.module.scss
+++ b/components/resource/layout/author/author.module.scss
@@ -30,7 +30,7 @@
     flex: 1;
     .name {
       font-weight: bold;
-      margin-bottom: 1rem;
+      margin-bottom: 0.7rem;
       font-size: 1.7rem;
       line-height: 1.8;
 
@@ -50,7 +50,7 @@
 
     .learnMore {
       font-size: 1.6rem;
-      margin-top: 2.9rem;
+      margin-top: 2rem;
 
       @include mixins.mediaquery("lg") {
         font-size: 1.7rem;
