--- a/components/resource/layout/footer/footer.module.scss
+++ b/components/resource/layout/footer/footer.module.scss
@@ -1,28 +1,60 @@
 @use "styles/_mixins";
 
-.date {
+.wrapper {
+  @include mixins.flex(space-between);
   width: 100%;
-  text-align: right;
-  font-size: 1.4rem;
-  font-style: italic;
-  color: var(--gray-300);
-  margin-top: -5.5rem;
-}
+  margin-bottom: 1.5rem;
 
-.date {
-  margin-top: -5.5rem;
+  @include mixins.mediaquery("xs") {
+    margin-bottom: 2rem;
+  }
+
+  @include mixins.mediaquery("sm") {
+    margin-bottom: 2.5rem;
+  }
+
+  @include mixins.mediaquery("xxl") {
+    justify-content: flex-end;
+  }
+
+  .likes {
+    @include mixins.mediaquery("xxl") {
+      display: none;
+    }
+  }
+
+  .info {
+    @include mixins.flex(center, flex-end);
+    flex-direction: column;
+    flex-shrink: 1;
+    flex-grow: 0;
+    opacity: 0.6;
+
+    .date {
+      width: 100%;
+      text-align: right;
+      font-size: 1.4rem;
+      font-style: italic;
+      opacity: 0.6;
+    }
+  }
 }
 
 .links {
-  @include mixins.flex(space-between);
+  @include mixins.flex(flex-end);
   width: 100%;
   flex-wrap: wrap;
   gap: 0.9rem;
   font-size: 1.55rem;
   padding-bottom: 1.7rem;
+  margin-right: -0.7rem;
 
   @media all and (min-width: 380px) {
     font-size: 1.6rem;
+  }
+
+  @include mixins.mediaquery("xs") {
+    justify-content: space-between;
   }
 
   @include mixins.mediaquery("lg") {
