--- a/components/resource/layout/likes/counter/likesCounter.module.scss
+++ b/components/resource/layout/likes/counter/likesCounter.module.scss
@@ -6,10 +6,15 @@
   gap: 1.8rem;
 
   .text {
-    font-weight: 500;
+    font-weight: 600;
     font-size: 1.6rem;
     padding-top: 0.3rem;
     opacity: 0.6;
+
+    &.given {
+      opacity: 0.85;
+      color: var(--red-100);
+    }
   }
 
   .wrapper {
